--- a/src/components/homepage1/auth/auth.css
+++ b/src/components/homepage1/auth/auth.css
@@ -1,20 +1,20 @@
+body{
+  margin:0px;
+  padding:0px;
+}
 .page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2em;
-  height: 100vh;
-  width: 100vw;
+  
+   height:100vh;
   position: relative;
-  overflow: hidden;
-}
-.body{
-  width: 100vw;
-  height: 100vh;
+  
   background: url('../../../assets/image-1-Picsart-AiImageEnhancer.jpeg') no-repeat center/cover;
   
 }
+
 
 /* Glassmorphic form */
 .page form {
